# filter-marta-data

./: .gitignore  CMakeLists.txt  condor.sh
cmake/: StandardSettings.cmake
condor-scripts/: condor.cmd
src/: main.cpp
